# rust-lang-examples

./: .gitignore  NOTES.md  README.md
actix-web-examples/actix-demo/: Cargo.toml
actix-web-examples/actix-demo/src/: hello.rs  main.rs
actix-web-examples/actix-demo/src/auth/: login.rs
actix-web-examples/actix-web-2-demo/: Cargo.toml  README.md  docker-compose.yml
actix-web-examples/actix-web-2-demo/migrations/2020-03-03-115003_create_greetings_table/: down.sql  up.sql
actix-web-examples/actix-web-2-demo/migrations/2020-03-03-122030_insert_initial_greetings/: down.sql  up.sql
actix-web-examples/actix-web-2-demo/src/: config.rs  dbgreeting.rs  greeting.rs  hello.rs  main.rs  schema.rs
async-await-example/: Cargo.toml
async-await-example/src/: main.rs
aws-sdk-client-example/: Cargo.toml  README.md
aws-sdk-client-example/src/: main.rs
basic-thread-usage/: Cargo.toml
basic-thread-usage/src/: main.rs
builder-pattern/: Cargo.toml
builder-pattern/src/: hero.rs  lib.rs  main.rs
ceph_explorer_workspace/: Cargo.toml
ceph_explorer_workspace/ceph_explorer/: Cargo.toml
ceph_explorer_workspace/ceph_explorer_cli/: Cargo.toml
ceph_explorer_workspace/ceph_explorer_gui/: Cargo.toml
clap-example/: Cargo.toml
clap-example/src/: main.rs
concurrency/: README.md
concurrency/basic_thread/: Cargo.toml
config-example/: Cargo.toml
debugging/: README.md
error-handling/: Cargo.toml
ffi/calc/: calc.c  (+2 more)
financiamento/: Cargo.toml
guessing-game/: Cargo.toml
hash-performance/: .gitignore  Cargo.toml
helloworld/: Cargo.toml
horas_trabalhadas_rs/: .gitignore  Cargo.toml  snapcraft.yaml
http-client/: Cargo.toml
http-client/src/: main.rs
http-client/src/example/: hyper.rs  mod.rs  reqwest.rs
http-client/src/example2/: mod.rs
http-client/src/example2/jsonplaceholder/: mod.rs  post.rs  reqwest.rs  service.rs
integer_limits/: Cargo.toml
parsers/: Cargo.toml
parsing-example/: Cargo.toml
path-check/: Cargo.toml
positional-parser/: .gitignore  Cargo.toml  TODO.md
prometheus-examples/: Cargo.toml
rust-gtk-hello-world/: Cargo.toml
specs-example/: Cargo.toml
tcp-examples/: Cargo.toml
tcp_example/: Cargo.toml
try-from-example/: Cargo.toml
x509-examples/: Cargo.toml
(+100 files in other folders)
