[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Hugo Benicio <hbobenicio@gmail.com>"]

[dependencies]
log = "0.4"
env_logger = "0.6"

actix-web = "0.7"

# Serde: The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"

# Serde: Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# Serde: Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
