[package]
name = "actix-web-2-demo"
version = "0.1.0"
authors = ["hbobenicio <hbobenicio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"

actix-web = "2.0.0"
actix-rt = "1.0.0"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
